model-viewer 폴더 생성 업로드 06/26

--- a/3D-model-viewer/html/model-viewer.html
+++ b/3D-model-viewer/html/model-viewer.html
@@ -43,6 +43,7 @@
 			<!-- 3D 렌더 영역 -->
 			<model-viewer 
 				src="https://modelviewer.dev/shared-assets/models/Astronaut.glb" 
+				loading="eager"
 				camera-controls
 				touch-action="pan-y" 
 				ar-placement="wall"  
